# jpostal

./: .gitignore  README.md  build-docker.sh  build-win-msys2.md  build.gradle  build.sh  configure.ac
docker/: Dockerfile
src/main/c/: Makefile.am  jpostal_AddressExpander.c  jpostal_AddressParser.c
src/main/java/: PVJpostal.java
src/main/java/com/pontusvision/jpostal/: AddressExpander.java  AddressParser.java  ExpanderOptions.java  NativeLoader.java  ParsedComponent.java  ParserOptions.java
src/test/: pom.xml
src/test/java/com/pontusvision/jpostal/: TestAddressExpander.java  TestAddressParser.java
